1999-02-17  Jim Kingdon  <http://www.cyclic.com>
	and Hallvard B Furuseth.

	* util.c: Use __STDC__ consistently with ./system.h.
	* system.h: Add comment about PARAMS.

1999-01-12  Jim Kingdon  <http://www.cyclic.com>

	* Makefile.in, analyze.c, cmpbuf.c, cmpbuf.h, context.c, diff.c,
	diff.h, diff3.c, diffrun.h, dir.c, ed.c, io.c, normal.c, system.h,
	util.c: Remove paragraph containing the old snail mail address of
	the Free Software Foundation.

1998-09-21  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* util.c (printf_output): Make msg static; avoids auto
	initializer, which is not portable to SunOS4 /bin/cc.
	Reported by Mike Sutton@SAIC.

1998-09-14  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (DISTFILES): Add diagmeet.note.

1998-08-15  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diffrun.h (struct diff_callbacks): Change calling convention of
	write_output so that a zero length means to output zero bytes.
	The cvs_output convention is just too ugly/error-prone.
	* util.c (printf_output): Rewrite to parse format string
	overselves rather than calling vasprintf, which cannot be
	implemented in portable C.

1998-08-06  David Masterson of kla-tencor.com

	* util.c (flush_output): Don't prototype.

Thu Jul  2 16:34:38 1998  Ian Lance Taylor  <ian@cygnus.com>

	Simplify the callback interface:
	* diffrun.h: Don't include <stdarg.h> or <varargs.h>.
	(struct diff_callbacks): Remove printf_output field.
	* util.c: Include <stdarg.h> or <varargs.h>.
	(printf_output): Use vasprintf and write_output callback rather
	than printf_output callback.
	* diff3.c (read_diff): Don't set my_callbacks.printf_output.

Thu Jun 18 12:43:53 1998  Ian Lance Taylor  <ian@cygnus.com>

	* diffrun.h: New file.
	* diff.h: Include diffrun.h.
	(callbacks): New EXTERN variable.
	(write_output, printf_output, flush_output): Declare.
	* diff.c (diff_run): Add parameter callbacks_arg.  Use callback
	functions rather than writing to stdout.  Don't open a file if