@@ -1,3 +1,10 @@
+1999-03-24  Larry Jones  <larry.jones@sdrc.com>
+	and Olaf Brandes
+
+	* diff3.c (diff3_run): Use a separate stream for the input to
+	output_diff3_merge instead of reopening stdin to avoid problems
+	with leaving it open.
+
 1999-02-17  Jim Kingdon  <http://www.cyclic.com>
 	and Hallvard B Furuseth.
 
